---
source: book/tests/snapshot.rs
expression: "from de=dept_emp\njoin s=salaries side:left [\n  (s.emp_no == de.emp_no),\n  s\"\"\"({s.from_date}, {s.to_date})\n  OVERLAPS\n  ({de.from_date}, {de.to_date})\"\"\"\n]\n"
---
from de = dept_emp
join side:left s = salaries [
  s.emp_no == de.emp_no,
  s"({s.from_date}, {s.to_date})
  OVERLAPS
  ({de.from_date}, {de.to_date})",
]



